Change background and fix blurEffect

--- a/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
@@ -15,7 +15,6 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="s7M-nP-MTF">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" red="0.64252416864056761" green="0.8304783367215498" blue="0.98192387819290161" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="tintColor" systemColor="secondarySystemGroupedBackgroundColor"/>
                     </tabBar>
                     <connections>
@@ -38,17 +37,17 @@
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zDU-dS-fVu">
                                 <rect key="frame" x="0.0" y="44" width="414" height="769"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <color key="sectionIndexBackgroundColor" red="0.4001302082" green="0.51706008240000001" blue="0.60996430989999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" red="0.64313727620000005" green="0.83137255909999996" blue="0.98039215800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="sectionIndexBackgroundColor" red="0.64313727620000005" green="0.83137255909999996" blue="0.98039215800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </tableView>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pgq-iw-XtP">
-                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="9zx-Fe-WRZ">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="769"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="gRx-Dc-Uwz">
-                                            <rect key="frame" x="177" y="354.5" width="60" height="60"/>
+                                            <rect key="frame" x="177" y="418" width="60" height="60"/>
                                             <color key="tintColor" systemColor="systemIndigoColor"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="60" id="392-GP-MIn"/>
@@ -70,12 +69,12 @@
                         <constraints>
                             <constraint firstItem="C4v-Hv-ezi" firstAttribute="bottom" secondItem="zDU-dS-fVu" secondAttribute="bottom" id="5H9-LF-1M8"/>
                             <constraint firstItem="C4v-Hv-ezi" firstAttribute="trailing" secondItem="zDU-dS-fVu" secondAttribute="trailing" id="9zB-GR-8y7"/>
+                            <constraint firstItem="pgq-iw-XtP" firstAttribute="top" secondItem="1G4-OC-HYE" secondAttribute="top" id="IfP-IB-pwa"/>
                             <constraint firstItem="zDU-dS-fVu" firstAttribute="top" secondItem="C4v-Hv-ezi" secondAttribute="top" id="J2d-GS-IJn"/>
-                            <constraint firstItem="C4v-Hv-ezi" firstAttribute="trailing" secondItem="pgq-iw-XtP" secondAttribute="trailing" id="NL4-R6-bXV"/>
-                            <constraint firstItem="pgq-iw-XtP" firstAttribute="top" secondItem="C4v-Hv-ezi" secondAttribute="top" id="QoA-WV-4Fa"/>
                             <constraint firstItem="zDU-dS-fVu" firstAttribute="leading" secondItem="C4v-Hv-ezi" secondAttribute="leading" id="ZzW-k5-rSp"/>
-                            <constraint firstItem="pgq-iw-XtP" firstAttribute="leading" secondItem="C4v-Hv-ezi" secondAttribute="leading" id="gXs-91-30a"/>
-                            <constraint firstItem="C4v-Hv-ezi" firstAttribute="bottom" secondItem="pgq-iw-XtP" secondAttribute="bottom" id="mBy-wb-bVE"/>
+                            <constraint firstItem="pgq-iw-XtP" firstAttribute="leading" secondItem="1G4-OC-HYE" secondAttribute="leading" id="hwe-R2-KhL"/>
+                            <constraint firstAttribute="trailing" secondItem="pgq-iw-XtP" secondAttribute="trailing" id="ikR-c7-IJO"/>
+                            <constraint firstAttribute="bottom" secondItem="pgq-iw-XtP" secondAttribute="bottom" id="u4B-5v-ceI"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Current Weather" image="cloud.sun" catalog="system" id="VxK-fh-oDL"/>
