Fix Tabbar between mapController and RequestController

--- a/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
@@ -15,7 +15,9 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="s7M-nP-MTF">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" red="0.64252416859999995" green="0.83047833670000004" blue="0.98192387820000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <color key="tintColor" systemColor="secondarySystemGroupedBackgroundColor"/>
+                        <color key="barTintColor" red="0.64313727620000005" green="0.83137255909999996" blue="0.98039215800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </tabBar>
                     <connections>
                         <segue destination="YgK-KP-I7e" kind="relationship" relationship="viewControllers" id="Y0r-Mw-Wci"/>
@@ -121,10 +123,10 @@
                         <viewLayoutGuide key="safeArea" id="MNV-sd-RRq"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="MNV-sd-RRq" firstAttribute="bottom" secondItem="gdP-m8-7W4" secondAttribute="bottom" id="JDp-b5-6EM"/>
-                            <constraint firstItem="MNV-sd-RRq" firstAttribute="trailing" secondItem="gdP-m8-7W4" secondAttribute="trailing" id="WQS-J4-6wl"/>
-                            <constraint firstItem="gdP-m8-7W4" firstAttribute="leading" secondItem="MNV-sd-RRq" secondAttribute="leading" id="alg-hP-f0T"/>
-                            <constraint firstItem="gdP-m8-7W4" firstAttribute="top" secondItem="MNV-sd-RRq" secondAttribute="top" id="sND-by-6uQ"/>
+                            <constraint firstItem="gdP-m8-7W4" firstAttribute="leading" secondItem="MNV-sd-RRq" secondAttribute="leading" id="2yQ-Ze-jgA"/>
+                            <constraint firstItem="MNV-sd-RRq" firstAttribute="trailing" secondItem="gdP-m8-7W4" secondAttribute="trailing" id="Cti-GI-PsZ"/>
+                            <constraint firstItem="gdP-m8-7W4" firstAttribute="top" secondItem="MNV-sd-RRq" secondAttribute="top" id="Hvq-mB-kyd"/>
+                            <constraint firstItem="MNV-sd-RRq" firstAttribute="bottom" secondItem="gdP-m8-7W4" secondAttribute="bottom" id="czd-yJ-EZP"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Requests List" image="list.bullet.rectangle" catalog="system" id="55h-t8-O8n"/>
@@ -134,7 +136,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pFB-cW-1RE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-736" y="674"/>
+            <point key="canvasLocation" x="-736.23188405797111" y="673.66071428571422"/>
         </scene>
     </scenes>
     <resources>
