Start doing settings view: add nessessary controllers and prescribed extensions for them

--- a/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
+++ b/WeatherApp/WeatherApp/Base.lproj/Main.storyboard
@@ -153,6 +153,117 @@
             </objects>
             <point key="canvasLocation" x="-736" y="680"/>
         </scene>
+        <!--Weather Conditional View-->
+        <scene sceneID="UwV-MI-enZ">
+            <objects>
+                <viewController storyboardIdentifier="WeatherConditionalView" id="8Or-Yn-HOE" customClass="WeatherConditionalView" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="VKp-XC-cSB">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="6vE-cJ-xeI">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Fgh-mO-Kls"/>
+                        <color key="backgroundColor" red="0.64313727620000005" green="0.83137255909999996" blue="0.98039215800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="6vE-cJ-xeI" firstAttribute="leading" secondItem="Fgh-mO-Kls" secondAttribute="leading" id="3Fa-nJ-fDu"/>
+                            <constraint firstItem="Fgh-mO-Kls" firstAttribute="trailing" secondItem="6vE-cJ-xeI" secondAttribute="trailing" id="4f8-zP-f6z"/>
+                            <constraint firstItem="Fgh-mO-Kls" firstAttribute="bottom" secondItem="6vE-cJ-xeI" secondAttribute="bottom" id="WD0-dH-sDG"/>
+                            <constraint firstItem="6vE-cJ-xeI" firstAttribute="top" secondItem="Fgh-mO-Kls" secondAttribute="top" id="vPl-Km-nCa"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TNW-Ji-m3a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="264" y="915"/>
+        </scene>
+        <!--System View Controller-->
+        <scene sceneID="AfG-FM-hN0">
+            <objects>
+                <viewController storyboardIdentifier="SystemViewController" id="R9y-8y-r9N" customClass="SystemViewController" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="O8b-W4-56T">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="TMT-t7-iO1">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="qcd-VN-qbU"/>
+                        <color key="backgroundColor" red="0.64313727620000005" green="0.83137255909999996" blue="0.98039215800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="qcd-VN-qbU" firstAttribute="bottom" secondItem="TMT-t7-iO1" secondAttribute="bottom" id="87m-vN-0RE"/>
+                            <constraint firstItem="qcd-VN-qbU" firstAttribute="trailing" secondItem="TMT-t7-iO1" secondAttribute="trailing" id="LTo-iM-A7a"/>
+                            <constraint firstItem="TMT-t7-iO1" firstAttribute="top" secondItem="qcd-VN-qbU" secondAttribute="top" id="QUP-nc-xzd"/>
+                            <constraint firstItem="TMT-t7-iO1" firstAttribute="leading" secondItem="qcd-VN-qbU" secondAttribute="leading" id="bMF-x5-BUb"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q17-3y-z0p" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1077" y="915"/>
+        </scene>
+        <!--Request View Controller-->
+        <scene sceneID="qRe-Zn-As8">
+            <objects>
+                <viewController storyboardIdentifier="RequestViewController" id="ifl-Oo-fPS" customClass="RequestViewController" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kEK-oc-FHZ">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="eNl-iC-9yn">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="d9d-Nn-4HY"/>
+                        <color key="backgroundColor" red="0.64313727620000005" green="0.83137255909999996" blue="0.98039215800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="eNl-iC-9yn" firstAttribute="leading" secondItem="d9d-Nn-4HY" secondAttribute="leading" id="5GO-QH-WaK"/>
+                            <constraint firstItem="d9d-Nn-4HY" firstAttribute="bottom" secondItem="eNl-iC-9yn" secondAttribute="bottom" id="Z5j-aK-iKW"/>
+                            <constraint firstItem="d9d-Nn-4HY" firstAttribute="trailing" secondItem="eNl-iC-9yn" secondAttribute="trailing" id="fjT-9v-Ls1"/>
+                            <constraint firstItem="eNl-iC-9yn" firstAttribute="top" secondItem="d9d-Nn-4HY" secondAttribute="top" id="vdq-DI-CzF"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="tableViewForRequestedData" destination="eNl-iC-9yn" id="NnL-ZU-Mr1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2uS-CS-emZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="264" y="234"/>
+        </scene>
+        <!--Data View Controller-->
+        <scene sceneID="wfP-eJ-W6F">
+            <objects>
+                <viewController storyboardIdentifier="DataViewController" id="Nq5-m9-3ha" customClass="DataViewController" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vzB-sm-UxL">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="rSq-B6-p4f">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="cJr-1z-Mqv"/>
+                        <color key="backgroundColor" red="0.64313727620000005" green="0.83137255909999996" blue="0.98039215800000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="cJr-1z-Mqv" firstAttribute="bottom" secondItem="rSq-B6-p4f" secondAttribute="bottom" id="f7J-HS-yDU"/>
+                            <constraint firstItem="rSq-B6-p4f" firstAttribute="top" secondItem="cJr-1z-Mqv" secondAttribute="top" id="p4c-Fi-SEM"/>
+                            <constraint firstItem="rSq-B6-p4f" firstAttribute="leading" secondItem="cJr-1z-Mqv" secondAttribute="leading" id="sE5-wD-GWJ"/>
+                            <constraint firstItem="cJr-1z-Mqv" firstAttribute="trailing" secondItem="rSq-B6-p4f" secondAttribute="trailing" id="wJW-On-VB3"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eKa-2R-4Tv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1078" y="234"/>
+        </scene>
     </scenes>
     <resources>
         <image name="cloud.sun" catalog="system" width="128" height="95"/>
