--- a/WeatherApp/WeatherApp/Cells/SettingsViewCell/SettingsViewCell.xib
+++ b/WeatherApp/WeatherApp/Cells/SettingsViewCell/SettingsViewCell.xib
@@ -22,8 +22,8 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="NAZ-EO-i4s">
-                        <rect key="frame" x="247.5" y="2" width="82.5" height="56.5"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="greaterthan" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="NAZ-EO-i4s">
+                        <rect key="frame" x="247.5" y="3" width="82.5" height="53.5"/>
                     </imageView>
                 </subviews>
                 <constraints>
@@ -46,6 +46,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="chevron.right" catalog="system" width="96" height="128"/>
+        <image name="greaterthan" catalog="system" width="128" height="111"/>
     </resources>
 </document>
